# ebook-GPT-translator

./: .env.example  .gitignore  LICENSE  README-zh.md  README.md  examples.glossary.csv  pyproject.toml  requirements.txt  settings.cfg  settings.cfg.example  settings.toml.example  text_translation.py  the-trial-for-murder.epub  transliteration-list-example.xlsx
.github/workflows/: ci.yml
docs/: review.md
src/ebook_gpt_translator/: __init__.py  __main__.py  cache.py  chunking.py  cli.py  config.py  documents.py  glossary.py  gui.py  legacy.py  models.py  pipeline.py  providers.py
tests/: test_auth_cli.py  test_chunking.py  test_claude_provider.py  test_codex_provider.py  test_config.py  test_documents.py  test_gemini_provider.py  test_glossary.py  test_gui.py  test_json_extraction.py  test_list_models.py  test_pipeline.py
