[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebook-gpt-translator"
version = "2.0.0"
description = "Translate TXT, EPUB, DOCX, PDF, and MOBI ebooks with modern OpenAI-compatible APIs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jesse Lau" },
]
keywords = ["ebook", "translator", "openai", "azure-openai", "epub", "pdf"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dependencies = [
  "beautifulsoup4>=4.12",
  "EbookLib>=0.18",
  "openai>=1.0.0",
  "pandas>=2.0.0",
  "PyMuPDF>=1.23",
  "python-docx>=1.1.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "tiktoken>=0.7.0",
  "tomli>=2.0.0; python_version < '3.11'",
  "typer>=0.12.0",
]

[project.optional-dependencies]
mobi = ["mobi>=0.4.1"]
xlsx = ["openpyxl>=3.1.0"]

[project.scripts]
ebook-gpt-translator = "ebook_gpt_translator.cli:app"
ebook-gpt-translator-gui = "ebook_gpt_translator.gui:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
